--- a/Grad/Grad/Views/Shared/_Layout.cshtml
+++ b/Grad/Grad/Views/Shared/_Layout.cshtml
@@ -33,8 +33,11 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Articles" asp-action="Index">Articles</a></li>
+                    <li><a asp-area="" asp-controller="ArticleRequests" asp-action="Index">Requests</a></li>
+                    <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+                    <li><a asp-area="" asp-controller="Roles" asp-action="Index">Roles</a></li>
+                    
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
