--- a/Grad/Grad/Views/ArticleRequests/Index.cshtml
+++ b/Grad/Grad/Views/ArticleRequests/Index.cshtml
@@ -39,7 +39,8 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ArticleRequestId">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ArticleRequestId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ArticleRequestId">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.ArticleRequestId">Delete</a> |
+                <a asp-action="Register" asp-route-id="@item.ArticleRequestId">Register</a>
             </td>
         </tr>
 }
