--- a/Grad/Grad/Views/Articles/Index.cshtml
+++ b/Grad/Grad/Views/Articles/Index.cshtml
@@ -39,6 +39,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.ArticleID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ArticleID">Details</a> |
+                <a asp-action="Write" asp-route-id="@item.ArticleID">Write</a> |
                 <a asp-action="Delete" asp-route-id="@item.ArticleID">Delete</a>
             </td>
         </tr>
