--- a/Grad/Grad/Views/Articles/Write.cshtml
+++ b/Grad/Grad/Views/Articles/Write.cshtml
@@ -37,10 +37,18 @@
             </div>
         </div>
 
-        <div>
+        @*<div>
             Text
             <div>
                 @Html.EditorFor(model => model.Text)
+            </div>
+        </div>*@
+
+        <div class="form-group">
+            <label asp-for="Text" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <textarea runat="server" asp-for="Text" class="form-control"></textarea>
+                <span asp-validation-for="Text" class="text-danger"></span>
             </div>
         </div>
 
@@ -52,3 +60,4 @@
         </div>
     </div>
 }
+
