--- a/Grad/Grad/Views/Authors/Create.cshtml
+++ b/Grad/Grad/Views/Authors/Create.cshtml
@@ -12,10 +12,9 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
-            <label asp-for="Id" class="col-md-2 control-label"></label>
+            <label asp-for="UserId" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId"></select>
             </div>
         </div>
         <div class="form-group">
