--- a/Grad/Grad/Views/Authors/Delete.cshtml
+++ b/Grad/Grad/Views/Authors/Delete.cshtml
@@ -13,16 +13,16 @@
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="AuthorId" />
         <dt>
-            @Html.DisplayNameFor(model => model.Id)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Id)
-        </dd>
-        <dt>
             @Html.DisplayNameFor(model => model.Article)
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Article.ArtDescr)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.User)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.User.Id)
         </dd>
     </dl>
     
