--- a/Grad/Grad/Views/Authors/Edit.cshtml
+++ b/Grad/Grad/Views/Authors/Edit.cshtml
@@ -13,10 +13,10 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="AuthorId" />
         <div class="form-group">
-            <label asp-for="Id" class="col-md-2 control-label"></label>
+            <label asp-for="UserId" class="control-label col-md-2"></label>
             <div class="col-md-10">
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId"></select>
+                <span asp-validation-for="UserId" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
