--- a/Grad/Grad/Views/Authors/Create.cshtml
+++ b/Grad/Grad/Views/Authors/Create.cshtml
@@ -1,10 +1,10 @@
-@model Grad.Models.Author
+﻿@model Grad.Models.Author
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
 }
 
-<h2>Create</h2>
+<h2>Создать</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
@@ -25,13 +25,13 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
