--- a/Grad/Grad/Views/Articles/Edit.cshtml
+++ b/Grad/Grad/Views/Articles/Edit.cshtml
@@ -1,14 +1,14 @@
-@model Grad.Models.Article
+﻿@model Grad.Models.Article
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Статьи";
 }
 
-<h2>Edit</h2>
+<h2>Изменить</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>Article</h4>
+        
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="ArticleID" />
@@ -35,7 +35,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-default" />
             </div>
         </div>
     </div>
