--- a/Grad/Grad/Views/Roles/UserList.cshtml
+++ b/Grad/Grad/Views/Roles/UserList.cshtml
@@ -1,13 +1,17 @@
 ﻿@model IEnumerable<Grad.Models.User>
 
-<h2>List</h2>
+@{
+    ViewData["Title"] = "Роли";
+}
+
+<h2>Пользователи</h2>
 <table class="table">
     @foreach (var user in Model)
     {
         <tr>
             <td>@user.Email</td>
             <td>
-                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-userid="@user.Id">Rights</a>
+                <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-userid="@user.Id">Права</a>
             </td>
         </tr>
     }
