--- a/Grad/Grad/Views/Account/AccessDenied.cshtml
+++ b/Grad/Grad/Views/Account/AccessDenied.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Access Denied";
+    ViewData["Title"] = "Доступ запрещён";
 }
 
 <header>
-    <h1 class="text-danger">Access Denied.</h1>
-    <p class="text-danger">You do not have access to this resource.</p>
+    <h1 class="text-danger">Доступ запрещён</h1>
+    <p class="text-danger">У вас нет прав доступа к этому ресурсу</p>
 </header>
