--- a/Grad/Grad/Views/Account/AddUser.cshtml
+++ b/Grad/Grad/Views/Account/AddUser.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Grad.Models.AddUserViewModel
 
 @{
-    ViewBag.Title = "Add user";
+    ViewBag.Title = "Добавить пользователя";
 }
 
-<h2>New user</h2>
+<h2>Новый пользователь</h2>
 
 
 @using (Html.BeginForm())
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
 
     <div>
-        <h4>Adding</h4>
+      
         <hr />
         @Html.ValidationSummary(false)
 
@@ -64,7 +64,7 @@
 
         <div>
             <div>
-                <input type="submit" value="Register" />
+                <input type="submit" value="Создать" />
             </div>
         </div>
     </div>
