--- a/Grad/Grad/Views/ArticleRequests/Edit.cshtml
+++ b/Grad/Grad/Views/ArticleRequests/Edit.cshtml
@@ -1,14 +1,13 @@
-@model Grad.Models.ArticleRequest
+﻿@model Grad.Models.ArticleRequest
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Заявки";
 }
 
-<h2>Edit</h2>
+<h2>Изменить</h2>
 
 <form asp-action="Edit">
     <div class="form-horizontal">
-        <h4>ArticleRequest</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="ArticleRequestId" />
@@ -35,14 +34,14 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
 @section Scripts {
