--- a/Grad/Grad/Views/ArticleRequests/Index.cshtml
+++ b/Grad/Grad/Views/ArticleRequests/Index.cshtml
@@ -1,13 +1,13 @@
-@model IEnumerable<Grad.Models.ArticleRequest>
+﻿@model IEnumerable<Grad.Models.ArticleRequest>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Заявки";
 }
 
-<h2>Index</h2>
+<h2>Заявки</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Создать</a>
 </p>
 <table class="table">
     <thead>
@@ -37,10 +37,10 @@
                 @Html.DisplayFor(modelItem => item.ReqDate)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ArticleRequestId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ArticleRequestId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ArticleRequestId">Delete</a> |
-                <a asp-action="Register" asp-route-id="@item.ArticleRequestId">Register</a>
+                <a asp-action="Edit" asp-route-id="@item.ArticleRequestId">Изменить</a> |
+                <a asp-action="Details" asp-route-id="@item.ArticleRequestId">Подробно</a> |
+                <a asp-action="Delete" asp-route-id="@item.ArticleRequestId">Удалить</a> |
+                <a asp-action="Register" asp-route-id="@item.ArticleRequestId">Зарегистрировать</a>
             </td>
         </tr>
 }
