--- a/Grad/Grad/Views/Articles/Delete.cshtml
+++ b/Grad/Grad/Views/Articles/Delete.cshtml
@@ -1,14 +1,13 @@
-@model Grad.Models.Article
+﻿@model Grad.Models.Article
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Статьи";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Удалить эту статью?</h3>
 <div>
-    <h4>Article</h4>
     <hr />
     <dl class="dl-horizontal">
         <input type="hidden" asp-for="ArticleID" />
@@ -34,8 +33,8 @@
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            <a asp-action="Index">Назад</a>
         </div>
     </form>
 </div>
