--- a/Grad/Grad/Views/Articles/Details.cshtml
+++ b/Grad/Grad/Views/Articles/Details.cshtml
@@ -1,13 +1,12 @@
-@model Grad.Models.Article
+﻿@model Grad.Models.Article
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Статьи";
 }
 
-<h2>Details</h2>
+<h2>Подробно</h2>
 
 <div>
-    <h4>Article</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -31,6 +30,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ArticleID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.ArticleID">Изменить</a> |
+    <a asp-action="Index">Назад</a>
 </div>
