--- a/Grad/Grad/Views/Authors/Delete.cshtml
+++ b/Grad/Grad/Views/Authors/Delete.cshtml
@@ -1,12 +1,12 @@
-@model Grad.Models.Author
+﻿@model Grad.Models.Author
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Авторы";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Удалить запись об авторе?</h3>
 <div>
     <h4>Author</h4>
     <hr />
@@ -28,8 +28,8 @@
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            <a asp-action="Index">Back to List</a>
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
+            <a asp-action="Index">Назад</a>
         </div>
     </form>
 </div>
