--- a/Grad/Grad/Views/Notes/Create.cshtml
+++ b/Grad/Grad/Views/Notes/Create.cshtml
@@ -1,14 +1,13 @@
-@model Grad.Models.Note
+﻿@model Grad.Models.Note
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Замечания";
 }
 
-<h2>Create</h2>
+<h2>Создать</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>Note</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
@@ -31,7 +30,7 @@
                 <span asp-validation-for="NoteDate" class="text-danger"></span>
             </div>
         </div>
-        <div class="form-group">
+        @*<div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <div class="checkbox">
                     <input asp-for="Fixed" />
@@ -46,16 +45,16 @@
                     <label asp-for="Checked"></label>
                 </div>
             </div>
-        </div>
+        </div>*@
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
