--- a/Grad/Grad/Views/Notes/Details.cshtml
+++ b/Grad/Grad/Views/Notes/Details.cshtml
@@ -1,13 +1,12 @@
-@model Grad.Models.Note
+﻿@model Grad.Models.Note
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Замечания";
 }
 
-<h2>Details</h2>
+<h2>Подробно</h2>
 
 <div>
-    <h4>Note</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -43,6 +42,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.NoteId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.NoteId">Изменить</a> |
+    <a asp-action="Index">Назад</a>
 </div>
