--- a/Grad/Grad/Views/Roles/Edit.cshtml
+++ b/Grad/Grad/Views/Roles/Edit.cshtml
@@ -1,7 +1,10 @@
 ﻿@using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 @model Grad.ViewModels.ChangeRoleViewModel
+@{
+    ViewData["Title"] = "Роли";
+}
 
-<h2>Role set @Model.UserEmail</h2>
+<h2>Установить роли @Model.UserEmail</h2>
 
 <form asp-action="Edit" method="post">
     <input type="hidden" name="userId" value="@Model.UserId" />
@@ -12,5 +15,5 @@
                    @(Model.UserRoles.Contains(role.Name) ? "checked=\"checked\"" : "") />@role.Name <br />
         }
     </div>
-    <button type="submit" class="btn btn-primary">Save</button>
+    <button type="submit" class="btn btn-primary">Сохранить</button>
 </form>
