--- a/Grad/Grad/Views/Roles/Index.cshtml
+++ b/Grad/Grad/Views/Roles/Index.cshtml
@@ -1,6 +1,10 @@
 ﻿@model IEnumerable<Microsoft.AspNetCore.Identity.EntityFrameworkCore.IdentityRole>
 
-<h2>Roles</h2>
+@{
+    ViewData["Title"] = "Роли";
+}
+
+<h2>Роли</h2>
 <table class="table">
     @foreach (var role in Model)
     {
@@ -9,11 +13,11 @@
             <td>
                 <form asp-action="Delete" asp-route-id="@role.Id" method="post">
                     <button type="submit" class="btn btn-sm btn-danger">
-                        Delete
+                        Удалить
                     </button>
                 </form>
             </td>
         </tr>
     }
 </table>
-<a asp-action="Create">Add</a>
+<a asp-action="Create">Добавить</a>
