--- a/Grad/Grad/Views/Pictures/Delete.cshtml
+++ b/Grad/Grad/Views/Pictures/Delete.cshtml
@@ -25,10 +25,10 @@
             @Html.DisplayFor(model => model.Descr)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Image)
+            @Html.DisplayNameFor(model => model.Path)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            @Html.DisplayFor(model => model.Path)
         </dd>
     </dl>
     
