--- a/Grad/Grad/Views/Notes/Create.cshtml
+++ b/Grad/Grad/Views/Notes/Create.cshtml
@@ -27,7 +27,7 @@
             <label asp-for="NoteDate" class="col-md-2 control-label"></label>
             <div class="col-md-10">
                 <input asp-for="NoteDate" class="form-control" />
-                <span asp-validation-for="NoteDate" class="text-danger"></span>
+                <span asp-validation-for="NoteDate" type="datetime-local" class="text-danger"></span>
             </div>
         </div>
         @*<div class="form-group">
