--- a/Grad/Grad/Views/Pictures/Details.cshtml
+++ b/Grad/Grad/Views/Pictures/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Descr)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Image)
+            @Html.DisplayNameFor(model => model.Path)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Image)
+            @Html.DisplayFor(model => model.Path)
         </dd>
     </dl>
 </div>
