--- a/Grad/Grad/Views/Pictures/Edit.cshtml
+++ b/Grad/Grad/Views/Pictures/Edit.cshtml
@@ -27,10 +27,10 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="Image" class="col-md-2 control-label"></label>
+            <label asp-for="Path" class="col-md-2 control-label"></label>
             <div class="col-md-10">
-                <input asp-for="Image" class="form-control" />
-                <span asp-validation-for="Image" class="text-danger"></span>
+                <input asp-for="Path" class="form-control" />
+                <span asp-validation-for="Path" class="text-danger"></span>
             </div>
         </div>
         <div class="form-group">
