--- a/Grad/Grad/Views/States/Add.cshtml
+++ b/Grad/Grad/Views/States/Add.cshtml
@@ -1,14 +1,13 @@
-@model Grad.Models.AddStateViewModel
+﻿@model Grad.Models.AddStateViewModel
 
 @{
-    ViewData["Title"] = "Add";
+    ViewData["Title"] = "Состояние";
 }
 
-<h2>Add</h2>
+<h2>Добавить</h2>
 
 <form asp-action="Add">
     <div class="form-horizontal">
-        <h4>State</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <input type="hidden" asp-for="artid"/>
@@ -43,13 +42,13 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
