--- a/Grad/Grad/Views/Authors/Add.cshtml
+++ b/Grad/Grad/Views/Authors/Add.cshtml
@@ -1,10 +1,10 @@
-@model Grad.Models.AddAuthViewModel
+п»ї@model Grad.Models.AddAuthViewModel
 
 @{
-    ViewData["Title"] = "Авторы";
+    ViewData["Title"] = "РђРІС‚РѕСЂС‹";
 }
 
-<h2>Добавить</h2>
+<h2>Р”РѕР±Р°РІРёС‚СЊ</h2>
 
 <form asp-action="Add">
     <div class="form-horizontal">
@@ -26,13 +26,13 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Сохранить" class="btn btn-default" />
+                <input type="submit" value="РЎРѕС…СЂР°РЅРёС‚СЊ" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Назад</a>
+    <a asp-action="Index">РќР°Р·Р°Рґ</a>
 </div>
 
