--- a/Grad/Grad/Views/Articles/Index.cshtml
+++ b/Grad/Grad/Views/Articles/Index.cshtml
@@ -41,6 +41,7 @@
                 <a asp-action="Edit" asp-route-id="@item.ArticleID">Изменить</a> |
                 <a asp-action="Details" asp-route-id="@item.ArticleID">Подробно</a> |
                 <a asp-action="Write" asp-route-id="@item.ArticleID">Писать</a> |
+                <a asp-action="Unblock" asp-route-id="@item.ArticleID">Разблокировать</a> |
                 <a asp-action="Delete" asp-route-id="@item.ArticleID">Удалить</a> 
             </td>
         </tr>
