--- a/Grad/Grad/Views/States/Add.cshtml
+++ b/Grad/Grad/Views/States/Add.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Grad.Models.AddStateViewModel
 
 @{
-    ViewData["Title"] = "Состояние";
+    ViewData["Title"] = "Состояния";
 }
 
 <h2>Добавить</h2>
