--- a/Grad/Grad/Views/States/Create.cshtml
+++ b/Grad/Grad/Views/States/Create.cshtml
@@ -1,14 +1,13 @@
-@model Grad.Models.State
+﻿@model Grad.Models.State
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Состояния";
 }
 
-<h2>Create</h2>
+<h2>Создать</h2>
 
 <form asp-action="Create">
     <div class="form-horizontal">
-        <h4>State</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -40,13 +39,13 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Назад</a>
 </div>
 
