--- a/Grad/Grad/Views/Status/Index.cshtml
+++ b/Grad/Grad/Views/Status/Index.cshtml
@@ -1,13 +1,13 @@
-@model IEnumerable<Grad.Models.Status>
+﻿@model IEnumerable<Grad.Models.Status>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Статусы";
 }
 
-<h2>Index</h2>
+<h2>Статусы</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Создать</a>
 </p>
 <table class="table">
     <thead>
@@ -25,8 +25,8 @@
                 @Html.DisplayFor(modelItem => item.StatusName)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.StatusId">Edit</a> |
-                <a asp-action="Delete" asp-route-id="@item.StatusId">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.StatusId">Изменить</a> |
+                <a asp-action="Delete" asp-route-id="@item.StatusId">Удалить</a>
             </td>
         </tr>
 }
