--- a/Grad/Grad/Views/Manage/ChangeUser.cshtml
+++ b/Grad/Grad/Views/Manage/ChangeUser.cshtml
@@ -1,13 +1,13 @@
-﻿@model Grad.Models.AddUserViewModel
+﻿@model Grad.Models.ChangeUserViewModel
 
 @{
-    ViewBag.Title = "Добавить пользователя";
+    ViewBag.Title = "Изменить данные";
 }
 
 <h2>Новый пользователь</h2>
 
 
-<form asp-action="AddUser">
+<form asp-action="ChangeUser">
     <div class="form-horizontal">
         <hr />
         <div class="form-group">
@@ -53,20 +53,9 @@
 
 
         <div class="form-group">
-            <label asp-for="Password" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="Password" class="form-control" />
-                <span asp-validation-for="Password" class="text-danger"></span>
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Создать" class="btn btn-default" />
+                <input type="submit" value="Сохранить" class="btn btn-default" />
             </div>
         </div>
     </div>
 </form>
-<div>
-    <a asp-action="Index">Назад</a>
-</div>
