--- a/Grad/Grad/Views/Roles/UserList.cshtml
+++ b/Grad/Grad/Views/Roles/UserList.cshtml
@@ -9,7 +9,7 @@
     @foreach (var user in Model)
     {
         <tr>
-            <td>@user.Email</td>
+            <td>@user.displayedname</td>
             <td>
                 <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-userid="@user.Id">Права</a>
             </td>
