--- a/Grad/Grad/Views/Shared/_Layout.cshtml
+++ b/Grad/Grad/Views/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                     <li><a asp-area="" asp-controller="ArticleRequests" asp-action="Index">Заявки</a></li>
                     <li><a asp-area="" asp-controller="Users" asp-action="Index">Пользователи</a></li>
                     <li><a asp-area="" asp-controller="Roles" asp-action="Index">Роли</a></li>
-                    <li><a asp-area="" asp-controller="Status" asp-action="Index">Состояния</a></li>
-                    <li><a asp-area="" asp-controller="States" asp-action="Index">Статусы</a></li>
+                    <li><a asp-area="" asp-controller="Status" asp-action="Index">Статусы</a></li>
+                    <li><a asp-area="" asp-controller="States" asp-action="Index">Состояния</a></li>
                     <li><a asp-area="" asp-controller="Authors" asp-action="Index">Авторы</a></li>
                     <li><a asp-area="" asp-controller="Notes" asp-action="Index">Замечания</a></li>
                     <li><a asp-area="" asp-controller="Pictures" asp-action="Index">Изображения</a></li>
