--- a/Grad/Grad/Views/Shared/_Layout.cshtml
+++ b/Grad/Grad/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Grad</a>
+                <a asp-area=""  class="navbar-brand">КАРП</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -51,7 +51,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2017 - Grad</p>
+            <p>&copy; 2017 - Компьютерная автоматизированная редакторская панель</p>
         </footer>
     </div>
 
